kubernetes/main/infrastructure/kube-system/cilium/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app hubble-ui
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  hostnames:
    - hubble.internal.denniseffing.de
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          namespace: kube-system
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
